fixed overflow code markup issue

--- a/src/components/Main/main.scss
+++ b/src/components/Main/main.scss
@@ -7,12 +7,6 @@
     resize: none;
   }
 
-  .markdown-preview {
-    @include sm-down() {
-      overflow-x: scroll;
-    }
-  }
-
   @include sm-down() {
     margin-top: 45px;
   }
